// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "equitas-selfe",
    "sc-ultimate",
    "axis-magnus",
    "amex-platinum-travel",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "axis-ace",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "amex-gold",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "indusind-eazydiner-platinum",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "axis-ace",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "hdfc-phonepe-ultimo",
    "amex-gold",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "axis-ace",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-orange",
    "bobcard-eterna",
    "yes-paisabazaar-paisasave",
    "hdfc-swiggy-black",
    "yes-first-preferred",
    "landmark-rewards-sbi-prime",
    "sbi-card-prime",
    "equitas-selfe",
  ],
  "combo-premium-travel": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "axis-horizon",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "sbi-card-miles-elite",
    "landmark-rewards-sbi-prime",
    "bobcard-etihad-guest",
    "idfc-mayura",
    "reliance-sbi-prime",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-airtel",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-ace",
    "axis-horizon",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-flipkart",
    "axis-privilege",
    "axis-samsung-signature",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "idfc-wow",
    "au-ixigo",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "hsbc-premier",
    "bobcard-etihad-guest",
    "idfc-ashva",
    "icici-makemytrip",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "idfc-wow",
    "idfc-mayura",
    "au-ixigo",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "aurum-sbi",
    "sc-beyond",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-privilege-easy",
    "axis-privilege",
    "axis-miles-and-more",
    "axis-kwik",
    "axis-rewards",
    "axis-indianoil",
    "axis-indianoil-easy",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "hdfc-shoppers-stop-black",
    "hdfc-tata-neu-infinity",
    "hdfc-irctc",
    "hdfc-tata-neu-plus",
    "hdfc-moneyback-plus",
    "hdfc-shoppers-stop",
    "hdfc-indianoil",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-coral-rupay",
    "icici-coral",
    "icici-sapphiro",
    "icici-sapphiro-rupay",
    "icici-rubyx",
    "icici-platinum-chip",
    "icici-emeralde",
  ],
  "issuer-sbi": [
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "sbi-card-prime",
    "sbi-card-elite",
    "aurum-sbi",
    "sbi-card-miles-prime",
    "sbi-card-miles-elite",
    "irctc-rupay-sbi",
    "reliance-sbi-prime",
    "tata-neu-plus-sbi",
    "landmark-rewards-sbi-prime",
    "irctc-sbi-platinum",
  ],
  "lifetime-free": [
    "hsbc-visa-platinum",
    "au-ixigo",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
    "idfc-first-select",
  ],
  "lounge": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "equitas-selfe",
    "kotak-solitaire",
    "sc-ultimate",
    "amex-platinum-travel",
    "bobcard-etihad-guest-premium",
    "equitas-powermiles",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "amex-membership-rewards",
    "indusind-eazydiner",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "hsbc-visa-platinum",
    "au-ixigo",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-infinite",
    "indusind-eazydiner-platinum",
    "indusind-tiger",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "sc-priority-visa-infinite",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "cheq-au",
    "hdfc-moneyback-plus",
    "amex-smartearn",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-flipkart",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "axis-fibe",
    "hsbc-live-plus",
    "axis-rewards",
    "axis-ace",
    "hsbc-rupay-cashback",
    "axis-select",
    "axis-my-zone",
    "axis-airtel",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "axis-airtel",
    "yes-reserv",
    "reliance-sbi-prime",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "phonepe-sbi-select-black",
    "reliance-sbi-prime",
    "sbi-card-miles",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop",
    "tata-neu-infinity-sbi",
    "phonepe-sbi-purple",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "indusind-eazydiner",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
    "au-ixigo",
  ],
  "segment-beginner": [
    "phonepe-sbi-select-black",
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "axis-airtel",
    "hdfc-swiggy-orange",
    "sbi-cashback",
    "yes-kiwi",
    "hdfc-swiggy-black",
    "amex-smartearn",
    "tata-neu-infinity-sbi",
  ],
  "segment-mid-premium": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "yes-marquee",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "indusind-eazydiner",
    "amex-membership-rewards",
    "yes-reserv",
  ],
  "segment-premium": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "amex-platinum-travel",
    "yes-marquee",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "indusind-eazydiner",
    "amex-membership-rewards",
    "amex-gold",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "aurum-sbi",
    "krisflyer-sbi-apex",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
    "hdfc-marriott-bonvoy",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "hsbc-travelone",
    "axis-magnus",
    "hdfc-regalia-gold",
    "icici-times-black",
    "yes-marquee",
    "kotak-white-reserve",
  ],
  "spend-international": [
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "amex-membership-rewards",
    "bobcard-etihad-guest-premium",
    "hsbc-premier",
    "bobcard-eterna",
    "hdfc-infinia-metal",
    "scapia-federal",
    "scapia-bobcard",
    "amex-gold",
    "bobcard-premier",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "icici-times-black",
    "sc-ultimate",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-selfe",
    "amex-membership-rewards",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "equitas-selfe",
    "axis-magnus",
    "yes-marquee",
    "sc-ultimate",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "axis-magnus",
    "icici-times-black",
    "sc-ultimate",
    "yes-marquee",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-orange",
    "axis-airtel",
    "hdfc-phonepe-ultimo",
    "hdfc-swiggy-black",
    "sbi-cashback",
    "axis-ace",
    "hdfc-millennia",
    "titan-sbi",
    "axis-fibe",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "hdfc-marriott-bonvoy",
    "yes-first-preferred",
    "landmark-rewards-sbi-prime",
    "sbi-card-prime",
  ],
  "usecase-entertainment": [
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "indusind-eazydiner",
    "yes-marquee",
    "bobcard-eterna",
    "sbi-card-prime",
    "sbi-card-elite",
    "yes-reserv",
    "au-ixigo",
    "yes-pop-club",
    "landmark-rewards-sbi-prime",
    "rbl-world-max",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "idfc-first-power",
    "hdfc-indianoil",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "bpcl-sbi-octane",
    "kotak-cashback-plus",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "equitas-selfe",
    "au-ixigo",
    "sbi-cashback",
  ],
  "usecase-online": [
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "csb-jupiter-edge-plus",
    "bobcard-eterna",
    "hdfc-pixel-play",
    "axis-cashback",
    "simplyclick-sbi",
    "indusind-eazydiner",
    "phonepe-sbi-purple",
    "kotak-cashback-plus",
    "yes-pop-club",
    "rbl-cookies",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "axis-horizon",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "phonepe-sbi-select-black",
    "reliance-sbi-prime",
    "sbi-card-miles",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop",
    "tata-neu-infinity-sbi",
    "phonepe-sbi-purple",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
      "hdfc-regalia-gold",
    ],
  },
  "category-rent": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "sc-ultimate",
      "axis-magnus-burgundy",
      "axis-magnus",
      "sc-beyond",
    ],
  },
  "category-rent-payment": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "sc-ultimate",
      "axis-magnus-burgundy",
      "axis-magnus",
      "sc-beyond",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "yes-paisabazaar-paisasave",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "hdfc-marriott-bonvoy",
      "indusind-eazydiner",
    ],
  },
  "combo-premium-travel": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "axis-horizon",
      "icici-adani-one-signature",
      "bobcard-etihad-guest-premium",
      "hdfc-marriott-bonvoy",
      "bobcard-eterna",
      "bobcard-etihad-guest",
      "sbi-card-miles-elite",
      "sbi-card-miles-prime",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-samsung-signature",
      "axis-flipkart",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-magnus-burgundy",
      "axis-magnus",
      "axis-horizon",
      "axis-privilege-easy",
    ],
  },
  "forex": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "hsbc-premier",
      "scapia-federal",
      "scapia-bobcard",
      "idfc-mayura",
      "au-ixigo",
      "idfc-wow",
    ],
  },
  "forex-zero": {
    "Cashback cards": [],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "scapia-federal",
      "scapia-bobcard",
      "idfc-mayura",
      "au-ixigo",
      "idfc-wow",
      "rbl-world-safari",
      "kotak-solitaire",
      "indusind-pioneer-heritage-metal",
    ],
  },
  "guest-lounge-query": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
      "axis-magnus",
      "yes-marquee",
      "sc-beyond",
      "idfc-mayura",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-magnus",
      "yes-marquee",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
    ],
  },
  "issuer-amex": {
    "Cashback cards": [],
    "Rewards cards": [
      "amex-platinum-travel",
      "amex-membership-rewards",
      "amex-gold",
      "amex-platinum-reserve",
      "amex-smartearn",
      "amex-platinum",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-samsung-signature",
      "axis-flipkart",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-magnus-burgundy",
      "axis-magnus",
      "axis-flipkart-super-elite",
      "axis-horizon",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-makemytrip",
      "icici-coral-rupay",
      "icici-coral",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "phonepe-sbi-purple",
      "bpcl-sbi-octane",
      "titan-sbi",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "tata-neu-infinity-sbi",
      "sbi-card-prime",
      "sbi-card-elite",
      "aurum-sbi",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "au-ixigo",
      "scapia-federal",
      "scapia-bobcard",
      "indusind-tiger",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "kotak-solitaire",
      "equitas-selfe",
      "sc-ultimate",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "hsbc-visa-platinum",
      "au-ixigo",
      "scapia-federal",
      "scapia-bobcard",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "flipkart-sbi",
      "axis-flipkart",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-select",
      "axis-my-zone",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "axis-airtel",
      "hdfc-swiggy-black",
      "sbi-cashback",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "sc-ultimate",
      "yes-reserv",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "equitas-selfe",
      "yes-reserv",
      "sbi-card-miles-prime",
      "kotak-white-reserve",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "sc-priority-visa-infinite",
      "hdfc-regalia-gold",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
      "axis-airtel",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hdfc-diners-club-privilege",
      "tata-neu-infinity-sbi",
      "hsbc-visa-platinum",
      "au-ixigo",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "yes-marquee",
      "amex-platinum-travel",
      "bobcard-etihad-guest-premium",
      "hdfc-marriott-bonvoy",
      "equitas-powermiles",
      "amex-membership-rewards",
    ],
  },
  "segment-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "yes-marquee",
      "amex-platinum-travel",
      "bobcard-etihad-guest-premium",
      "hdfc-marriott-bonvoy",
      "amex-membership-rewards",
      "equitas-powermiles",
    ],
  },
  "segment-super-premium": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
      "kotak-solitaire",
      "axis-magnus",
      "icici-times-black",
      "kotak-white-reserve",
      "aurum-sbi",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "axis-airtel",
      "hsbc-live-plus",
      "yes-kiwi",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "titan-sbi",
      "au-ixigo",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "au-ixigo",
      "csb-jupiter-edge-plus",
      "axis-ace",
      "sbm-paisabazaar-paisa-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "equitas-powermiles",
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "au-ixigo",
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "yes-kiwi",
      "hsbc-live-plus",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "hdfc-swiggy-orange",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-cashback": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "hdfc-swiggy-orange",
      "axis-airtel",
      "hdfc-phonepe-ultimo",
      "hdfc-swiggy-black",
      "sbi-cashback",
      "axis-ace",
    ],
    "Rewards cards": [
      "cheq-au",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "hdfc-marriott-bonvoy",
      "rbl-platinum-maxima-plus",
      "indusind-eazydiner",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "au-ixigo",
      "sbi-cashback",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
      "cheq-au",
      "indusind-eazydiner",
      "yes-marquee",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "idfc-first-power-plus",
      "sc-platinum-rewards",
      "hdfc-indianoil",
      "axis-indianoil-premium",
      "axis-indianoil",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "sbi-card-prime",
      "yes-marquee",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "bobcard-eterna",
      "yes-reserv",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "axis-fibe",
      "apollo-sbi-select",
      "axis-ace",
      "cheq-au",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
      "hdfc-diners-club-black-metal",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "au-ixigo",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "au-ixigo",
      "equitas-selfe",
      "yes-reserv",
      "sbi-card-miles-prime",
      "kotak-white-reserve",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "bobcard-eterna",
      "yes-reserv",
    ],
  },
  "premium-degrade-single": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "yes-marquee",
      "amex-platinum-travel",
      "bobcard-etihad-guest-premium",
      "hdfc-marriott-bonvoy",
      "amex-membership-rewards",
      "equitas-powermiles",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
}
`;
